--- a/index.html
+++ b/index.html
@@ -2,15 +2,19 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Video Prueba</title>
+  <title>Video Limpio YouTube</title>
 </head>
 <body>
-  <iframe 
-    width="640" 
-    height="360" 
-    src="https://www.youtube.com/embed/eXwfBLQowv4?controls=1&modestbranding=1&rel=0" 
-    frameborder="0" 
-    allowfullscreen>
-  </iframe>
+
+<h2>Video reproducido dentro de mi web</h2>
+
+<iframe
+  width="640"
+  height="360"
+  src="https://www.youtube.com/embed/VIDEO_ID?controls=0&modestbranding=1&rel=0&showinfo=0&disablekb=1"
+  frameborder="0"
+  allowfullscreen>
+</iframe>
+
 </body>
 </html>
