--- a/index.html
+++ b/index.html
@@ -1,20 +1,55 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Video Limpio YouTube</title>
+    <meta charset="UTF-8">
+    <style>
+        /* Contenedor principal del video */
+        .video-container {
+            position: relative;
+            width: 100%;
+            max-width: 640px; /* Puedes cambiar el ancho aquí */
+            aspect-ratio: 16 / 9; /* Mantiene la proporción 16:9 automáticamente */
+            overflow: hidden;
+            border-radius: 12px; /* Bordes redondeados estéticos */
+            box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+        }
+
+        /* Capa invisible que bloquea el área superior (Perfil y Compartir) */
+        .bloqueo-superior {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 75px; /* Altura suficiente para cubrir el título y botones */
+            z-index: 10;
+            background: rgba(0,0,0,0); /* Transparente */
+            pointer-events: auto; /* Captura el clic para que no llegue a YouTube */
+        }
+
+        /* El reproductor de YouTube */
+        .video-container iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 1;
+        }
+    </style>
 </head>
 <body>
 
-<h2>Video reproducido dentro de mi web</h2>
+    <div class="video-container">
+        <div class="bloqueo-superior"></div>
 
-<iframe
-  width="640"
-  height="360"
-  src="https://www.youtube.com/embed/VIDEO_ID?controls=0&modestbranding=1&rel=0&showinfo=0&disablekb=1"
-  frameborder="0"
-  allowfullscreen>
-</iframe>
+        <iframe 
+            src="https://www.youtube-nocookie.com/embed/4ilIPhLMiSc?controls=1&modestbranding=1&rel=0&iv_load_policy=3" 
+            title="Reproductor de video" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen>
+        </iframe>
+    </div>
 
 </body>
 </html>
