--- a/index.html
+++ b/index.html
@@ -1,51 +1,55 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <style>
-        .video-container {
-            position: relative;
-            width: 100%;
-            max-width: 640px;
-            aspect-ratio: 16 / 9;
-            overflow: hidden;
-            border-radius: 12px;
-            background-color: #000; /* Fondo negro mientras carga */
-        }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        /* Bloqueo para ocultar perfil y botones superiores */
-        .bloqueo-superior {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 60px;
-            z-index: 10;
-            background: transparent;
-        }
+<title>Video embebido</title>
 
-        .video-container iframe {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: 1;
-        }
-    </style>
+<style>
+.video-wrapper {
+  position: relative;
+  max-width: 720px;
+  margin: 40px auto;
+  aspect-ratio: 16 / 9;
+  background: #000;
+  overflow: hidden;
+  border-radius: 12px;
+}
+
+/* Capa superior que bloquea logo, canal y compartir */
+.capa-proteccion {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 60px;
+  z-index: 10;
+  pointer-events: auto;
+}
+
+/* iframe */
+.video-wrapper iframe {
+  width: 100%;
+  height: 100%;
+  border: none;
+}
+</style>
 </head>
+
 <body>
 
-    <div class="video-container">
-        <div class="bloqueo-superior"></div>
-        <iframe 
-            src="https://www.youtube.com/embed/4ilIPhLMiSc?rel=0&modestbranding=1&iv_load_policy=3" 
-            title="YouTube video player" 
-            frameborder="0" 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-            allowfullscreen>
-        </iframe>
-    </div>
+<div class="video-wrapper">
+  <div class="capa-proteccion"></div>
+
+  <iframe
+    src="https://www.youtube-nocookie.com/embed/eXwfBLQowv4?controls=1&rel=0"
+    title="Video"
+    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen>
+  </iframe>
+</div>
 
 </body>
 </html>
+
