--- a/index.html
+++ b/index.html
@@ -1,54 +1,113 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pilates y Tal Tal</title>
+  <style>
+    /* Colores de la paleta */
+    :root {
+      --eggshell: #F0EDDC;
+      --stone: #B9AC8C;
+      --roman-coffee: #845F4A;
+      --sea-pink: #DFA0AA;
+    }
 
-<title>Video embebido</title>
+    body {
+      margin: 0;
+      font-family: 'Arial', sans-serif;
+      background-color: var(--eggshell);
+      color: var(--roman-coffee);
+    }
 
-<style>
-.video-wrapper {
-  position: relative;
-  max-width: 720px;
-  margin: 40px auto;
-  aspect-ratio: 16 / 9;
-  background: #000;
-  overflow: hidden;
-  border-radius: 12px;
-}
+    .container {
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 20px;
+      background-color: #fff;
+      border-radius: 15px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    }
 
-/* Capa superior que bloquea logo, canal y compartir */
-.capa-proteccion {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 60px;
-  z-index: 10;
-  pointer-events: auto;
-}
+    h1 {
+      color: var(--roman-coffee);
+      font-size: 2.2rem;
+      margin-bottom: 10px;
+      text-align: center;
+    }
 
-/* iframe */
-.video-wrapper iframe {
-  width: 100%;
-  height: 100%;
-  border: none;
-}
-</style>
+    .description {
+      font-size: 1.1rem;
+      text-align: center;
+      margin-bottom: 15px;
+    }
+
+    .fuegos {
+      text-align: center;
+      font-size: 1.5rem;
+      margin-bottom: 20px;
+      color: var(--sea-pink);
+    }
+
+    video {
+      width: 100%;
+      border-radius: 10px;
+      margin-bottom: 20px;
+    }
+
+    .comments {
+      background-color: var(--eggshell);
+      padding: 15px;
+      border-radius: 10px;
+    }
+
+    .comment {
+      border-bottom: 1px solid var(--stone);
+      padding: 10px 0;
+    }
+
+    .comment:last-child {
+      border-bottom: none;
+    }
+
+    .username {
+      font-weight: bold;
+      margin-right: 5px;
+    }
+
+    .comment-text {
+      color: var(--roman-coffee);
+    }
+  </style>
 </head>
-
 <body>
 
-<div class="video-wrapper">
-  <div class="capa-proteccion"></div>
+  <div class="container">
+    <h1>Pilates y Tal Tal</h1>
+    <p class="description">Una rutina muy intensa para tonificar todo tu cuerpo 💪</p>
 
-  <iframe
-    src="https://www.youtube-nocookie.com/embed/eXwfBLQowv4?controls=1&rel=0"
-    title="Video"
-    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-    allowfullscreen>
-  </iframe>
-</div>
+    <div class="fuegos">🔥🔥🔥🔥🔥</div>
+
+    <video controls>
+      <source src="https://f005.backblazeb2.com/file/pruebajpch/WhatsApp+Video+2026-01-18+at+1.46.58+AM.mp4" type="video/mp4">
+      Tu navegador no soporta videos HTML5.
+    </video>
+
+    <div class="comments">
+      <div class="comment">
+        <span class="username">Usuario1:</span>
+        <span class="comment-text">¡Wow! Se ve súper intenso 😍</span>
+      </div>
+      <div class="comment">
+        <span class="username">Usuario2:</span>
+        <span class="comment-text">Necesito probar esta rutina 💪</span>
+      </div>
+      <div class="comment">
+        <span class="username">Usuario3:</span>
+        <span class="comment-text">Me encantan los fuegos, se ve motivador 🔥</span>
+      </div>
+    </div>
+  </div>
 
 </body>
 </html>
