--- a/index.html
+++ b/index.html
@@ -1,114 +1,21 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pilates y Tal Tal</title>
-  <style>
-    /* Colores de la paleta */
-    :root {
-      --eggshell: #F0EDDC;
-      --stone: #B9AC8C;
-      --roman-coffee: #845F4A;
-      --sea-pink: #DFA0AA;
-    }
-
-    body {
-      margin: 0;
-      font-family: 'Arial', sans-serif;
-      background-color: var(--eggshell);
-      color: var(--roman-coffee);
-    }
-
-    .container {
-      max-width: 800px;
-      margin: 40px auto;
-      padding: 20px;
-      background-color: #fff;
-      border-radius: 15px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-    }
-
-    h1 {
-      color: var(--roman-coffee);
-      font-size: 2.2rem;
-      margin-bottom: 10px;
-      text-align: center;
-    }
-
-    .description {
-      font-size: 1.1rem;
-      text-align: center;
-      margin-bottom: 15px;
-    }
-
-    .fuegos {
-      text-align: center;
-      font-size: 1.5rem;
-      margin-bottom: 20px;
-      color: var(--sea-pink);
-    }
-
-    video {
-      width: 100%;
-      border-radius: 10px;
-      margin-bottom: 20px;
-    }
-
-    .comments {
-      background-color: var(--eggshell);
-      padding: 15px;
-      border-radius: 10px;
-    }
-
-    .comment {
-      border-bottom: 1px solid var(--stone);
-      padding: 10px 0;
-    }
-
-    .comment:last-child {
-      border-bottom: none;
-    }
-
-    .username {
-      font-weight: bold;
-      margin-right: 5px;
-    }
-
-    .comment-text {
-      color: var(--roman-coffee);
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>Prueba Academia</title>
 </head>
-<body>
+<body style="background-color: #f4f4f4; font-family: sans-serif; text-align: center;">
 
-  <div class="container">
-    <h1>Pilates y Tal Tal</h1>
-    <p class="description">Una rutina muy intensa para tonificar todo tu cuerpo 💪</p>
-
-    <div class="fuegos">🔥🔥🔥🔥🔥</div>
-
-    <video controls>
-      <source src="https://f005.backblazeb2.com/file/pruebajpch/WhatsApp+Video+2026-01-18+at+1.46.58+AM.mp4" type="video/mp4">
-      Tu navegador no soporta videos HTML5.
-    </video>
-
-    <div class="comments">
-      <div class="comment">
-        <span class="username">Usuario1:</span>
-        <span class="comment-text">¡Wow! Se ve súper intenso 😍</span>
-      </div>
-      <div class="comment">
-        <span class="username">Usuario2:</span>
-        <span class="comment-text">Necesito probar esta rutina 💪</span>
-      </div>
-      <div class="comment">
-        <span class="username">Usuario3:</span>
-        <span class="comment-text">Me encantan los fuegos, se ve motivador 🔥</span>
-      </div>
+    <h1>Mi Primera Clase de Baile</h1>
+    
+    <div style="max-width: 600px; margin: 20px auto; background: white; padding: 10px; border-radius: 10px; shadow: 0 4px 8px rgba(0,0,0,0.1);">
+        <video width="100%" controls controlsList="nodownload" style="border-radius: 8px;">
+            <source src="https://f005.backblazeb2.com/file/pruebajpch/WhatsApp+Video+2026-01-18+at+1.46.58+AM.mp4" type="video/mp4">
+            Tu navegador no soporta el video.
+        </video>
     </div>
-  </div>
+
+    <p>Si ves el video arriba, ¡la conexión con Backblaze fue un éxito!</p>
 
 </body>
 </html>
-
