--- a/index.html
+++ b/index.html
@@ -1,21 +1,169 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <title>Prueba Academia</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pilates y Tal Tal</title>
+  <style>
+    /* Paleta de colores */
+    :root {
+      --background: #F0EDDC;
+      --card-bg: #fff;
+      --primary: #845F4A;
+      --secondary: #B9AC8C;
+      --accent: #DFA0AA;
+      --comment-bg: #FFF4F4;
+    }
+
+    body {
+      margin: 0;
+      font-family: 'Arial', sans-serif;
+      background-color: var(--background);
+      color: var(--primary);
+    }
+
+    .container {
+      max-width: 700px;
+      margin: 20px auto;
+      padding: 20px;
+      background-color: var(--card-bg);
+      border-radius: 15px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+    }
+
+    h1 {
+      text-align: center;
+      font-size: 2rem;
+      margin-bottom: 10px;
+      color: var(--primary);
+    }
+
+    .description {
+      text-align: center;
+      font-size: 1.1rem;
+      margin-bottom: 15px;
+    }
+
+    .fuegos {
+      text-align: center;
+      font-size: 2rem;
+      margin-bottom: 20px;
+      color: var(--accent);
+    }
+
+    /* Video más grande */
+    video {
+      width: 100%;
+      max-height: 500px;
+      border-radius: 12px;
+      margin-bottom: 25px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+    }
+
+    /* Comentarios estilo “red social” */
+    .comments {
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+    }
+
+    .comment {
+      display: flex;
+      align-items: flex-start;
+      gap: 10px;
+      background-color: var(--comment-bg);
+      padding: 10px;
+      border-radius: 10px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+    }
+
+    .avatar {
+      width: 40px;
+      height: 40px;
+      background-color: var(--secondary);
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #fff;
+      font-weight: bold;
+      font-size: 1rem;
+    }
+
+    .comment-content {
+      display: flex;
+      flex-direction: column;
+    }
+
+    .username {
+      font-weight: bold;
+      color: var(--primary);
+      font-size: 0.95rem;
+      margin-bottom: 3px;
+    }
+
+    .comment-text {
+      font-size: 0.95rem;
+      color: #555;
+    }
+
+    /* Responsive */
+    @media (max-width: 500px) {
+      h1 {
+        font-size: 1.6rem;
+      }
+      .description {
+        font-size: 1rem;
+      }
+      .fuegos {
+        font-size: 1.5rem;
+      }
+      video {
+        max-height: 300px;
+      }
+    }
+  </style>
 </head>
-<body style="background-color: #f4f4f4; font-family: sans-serif; text-align: center;">
+<body>
 
-    <h1>Mi Primera Clase de Baile</h1>
-    
-    <div style="max-width: 600px; margin: 20px auto; background: white; padding: 10px; border-radius: 10px; shadow: 0 4px 8px rgba(0,0,0,0.1);">
-        <video width="100%" controls controlsList="nodownload" style="border-radius: 8px;">
-            <source src="https://f005.backblazeb2.com/file/pruebajpch/WhatsApp+Video+2026-01-18+at+1.46.58+AM.mp4" type="video/mp4">
-            Tu navegador no soporta el video.
-        </video>
+  <div class="container">
+    <h1>Pilates y Tal Tal</h1>
+    <p class="description">Una rutina intensa para tonificar tu cuerpo 💪</p>
+
+    <!-- Intensidad -->
+    <div class="fuegos">🔥🔥🔥🔥🔥</div>
+
+    <!-- Video grande -->
+    <video controls>
+      <source src="https://f005.backblazeb2.com/file/pruebajpch/WhatsApp%20Video%202026-01-18%20at%201.46.58%20AM.mp4" type="video/mp4">
+      Tu navegador no soporta videos HTML5.
+    </video>
+
+    <!-- Comentarios estilo “red social” -->
+    <div class="comments">
+      <div class="comment">
+        <div class="avatar">U1</div>
+        <div class="comment-content">
+          <span class="username">Usuario1</span>
+          <span class="comment-text">¡Wow! Se ve súper intenso 😍</span>
+        </div>
+      </div>
+      <div class="comment">
+        <div class="avatar">U2</div>
+        <div class="comment-content">
+          <span class="username">Usuario2</span>
+          <span class="comment-text">Necesito probar esta rutina 💪</span>
+        </div>
+      </div>
+      <div class="comment">
+        <div class="avatar">U3</div>
+        <div class="comment-content">
+          <span class="username">Usuario3</span>
+          <span class="comment-text">Me encantan los fuegos, se ve motivador 🔥</span>
+        </div>
+      </div>
     </div>
-
-    <p>Si ves el video arriba, ¡la conexión con Backblaze fue un éxito!</p>
+  </div>
 
 </body>
 </html>
